--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -73,6 +73,10 @@ jobs:
           #
           # Note that each of these lines will appear as a separate run on
           # prover.certora.com
+          #
+          # It is often helpful to split up by rule or even by method for a
+          # parametric rule, although it is certainly possible to run everything
+          # at once by not passing the `--rule` or `--method` options
           - ERC20.conf --rule transferSpec
           - ERC20.conf --rule onlyHolderCanChangeAllowance --method "balanceOf()"
           - ERC20.conf --rule onlyHolderCanChangeAllowance --method "transferFrom(address,address,uint256)"
