--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -1,3 +1,7 @@
+# This is an example configuration file for running Certora verification
+# through github actions.  You can see the results for each push in the
+# "Actions" tab on the github website.
+#
 name: Certora verification
 
 on:
