--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -22,11 +22,6 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
-      - name: Install java
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-          java-package: 'jre'
       - name: Install certora
         run: pip install certora-cli
 
@@ -61,7 +56,8 @@ jobs:
           message="$(git log -n 1 --pretty=format:'CI ${{matrix.params}} %h .... %s')";
           certoraRun \
             certora/configs/${{ matrix.params }} \
-            --msg "$(echo $message | sed 's/[^a-zA-Z0-9., _-]/ /g')"
+            --msg "$(echo $message | sed 's/[^a-zA-Z0-9., _-]/ /g')" \
+            --no_typecheck
         env:
           # For this to work, you must set your CERTORAKEY secret on the github
           # website (settings > secrets > actions > new repository secret)
