--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -56,8 +56,7 @@ jobs:
           message="$(git log -n 1 --pretty=format:'CI ${{matrix.params}} %h .... %s')";
           certoraRun \
             certora/configs/${{ matrix.params }} \
-            --msg "$(echo $message | sed 's/[^a-zA-Z0-9., _-]/ /g')" \
-            --no_typecheck
+            --msg "$(echo $message | sed 's/[^a-zA-Z0-9., _-]/ /g')"
         env:
           # For this to work, you must set your CERTORAKEY secret on the github
           # website (settings > secrets > actions > new repository secret)
