--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -51,11 +51,11 @@ jobs:
       #
       # Here ${{ matrix.params }} gets replaced with each of the parameters
       # listed in the `params` section below.
-      - name: Verify rule ${{ matrix.params }}
+      - name: Verify rule ${{ matrix.params.name }}
         run: >
           message="$(git log -n 1 --pretty=format:'CI ${{matrix.params}} %h .... %s')";
           certoraRun \
-            certora/configs/${{ matrix.params }} \
+            certora/configs/${{ matrix.params.command }} \
             --msg "$(echo $message | sed 's/[^a-zA-Z0-9., _-]/ /g')"
         env:
           # For this to work, you must set your CERTORAKEY secret on the github
@@ -74,7 +74,7 @@ jobs:
       - name: Archive output json
         uses: actions/upload-artifact@v3
         with:
-          name: output for ${{ matrix.params }}
+          name: output for ${{ matrix.params.name }}
           path: output.json
 
     strategy:
@@ -91,7 +91,7 @@ jobs:
           # It is often helpful to split up by rule or even by method for a
           # parametric rule, although it is certainly possible to run everything
           # at once by not passing the `--rule` or `--method` options
-          - ERC20.conf --rule transferSpec
-          - ERC20.conf --rule onlyHolderCanChangeAllowance --method "balanceOf(address)"
-          - ERC20.conf --rule onlyHolderCanChangeAllowance --method "transferFrom(address,address,uint256)"
+          - {name: transferSpec,            command: ERC20.conf --rule transferSpec}
+          - {name: onlyHolder balancerOf,   command: ERC20.conf --rule onlyHolderCanChangeAllowance --method "balanceOf(address)"}
+          - {name: onlyHolder transferFrom, command: ERC20.conf --rule onlyHolderCanChangeAllowance --method "transferFrom(address,address,uint256)"
 
