--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -72,6 +72,7 @@ jobs:
           touch output.json;
 
       - name: Archive output json
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: output for ${{ matrix.params.name }}
