--- a/.github/workflows/certora.yml
+++ b/.github/workflows/certora.yml
@@ -93,6 +93,12 @@ jobs:
           # parametric rule, although it is certainly possible to run everything
           # at once by not passing the `--rule` or `--method` options
           - {name: transferSpec,            command: 'ERC20.conf --rule transferSpec'}
-          - {name: onlyHolder balanceOf,    command: 'ERC20.conf --rule onlyHolderCanChangeAllowance --method "balanceOf(address)"'}
-          - {name: onlyHolder transferFrom, command: 'ERC20.conf --rule onlyHolderCanChangeAllowance --method "transferFrom(address,address,uint256)"'}
+          - {name: transferReverts,              command: 'ERC20.conf --rule transferReverts'}
+          - {name: transferDoesntRevert,         command: 'ERC20.conf --rule transferDoesntRevert'}
+          - {name: transferFromSpec,             command: 'ERC20.conf --rule transferFromSpec'}
+          - {name: transferFromReverts,          command: 'ERC20.conf --rule transferFromReverts'}
+          - {name: transferFromDoesntRevert,     command: 'ERC20.conf --rule transferFromDoesntRevert'}
+          - {name: onlyHolderCanChangeAllowance, command: 'ERC20.conf --rule onlyHolderCanChangeAllowance'}
+          - {name: balancesBoundedByTotalSupply, command: 'ERC20.conf --rule balancesBoundedByTotalSupply'}
+          - {name: totalSupplyIsSumOfBalances,   command: 'ERC20.conf --rule totalSupplyIsSumOfBalances'}
 
