adding ERC20 with transfer bug as an example

--- a/certora/conf/ERC20.conf
+++ b/certora/conf/ERC20.conf
@@ -1,15 +1,15 @@
 {
   "files": [
-    "contracts/ERC20.sol:ERC20"
+    "contracts/ERC20TransferBug.sol:ERC20"
   ],
-  "verify": [
-    "ERC20:certora/spec/ERC20.spec"
-  ],
+  "verify":"ERC20:certora/spec/ERC20.spec"
+  ,
   "solc": "solc8.0",
   "msg": "ERC20",
   "optimistic_loop": false,
   "multi_assert_check": false,
   "send_only": true,
-  "disableLocalTypeChecking": true,
-  "process": "emv"
+  "process": "emv",
+  "server": "production",
+  "prover_version": "master"
 }
