removing redundan new line

--- a/certora/conf/ERC20TransferBug.conf
+++ b/certora/conf/ERC20TransferBug.conf
@@ -2,8 +2,7 @@
   "files": [
     "contracts/ERC20TransferBug.sol:ERC20"
   ],
-  "verify":"ERC20:certora/spec/ERC20.spec"
-  ,
+  "verify":"ERC20:certora/spec/ERC20.spec",
   "solc": "solc8.0",
   "msg": "ERC20",
   "optimistic_loop": false,
