CVL2 + more examples (#6)
* CVL2
* adding ERC20 with transfer bug as an example


---------

Co-authored-by: Shelly Grossman <shelly@certora.com>

--- a/certora/conf/ERC20TransferBug.conf
+++ b/certora/conf/ERC20TransferBug.conf
@@ -1,6 +1,6 @@
 {
   "files": [
-    "contracts/ERC20.sol:ERC20"
+    "contracts/ERC20TransferBug.sol:ERC20"
   ],
   "verify":"ERC20:certora/spec/ERC20.spec",
   "solc": "solc8.0",
